# rust-web-template

./: .gitignore  Cargo.toml  Makefile.toml  README.md  compose.yml
application-layer/web-app/: Cargo.toml
application-layer/web-app/src/: lib.rs
application-layer/web-app/src/models/: health.rs
application-layer/web-app/src/route/: health.rs  v1.rs
common-layer/registry/: Cargo.toml
common-layer/registry/src/: lib.rs
common-layer/shared/: Cargo.toml
common-layer/shared/src/: errors.rs  id.rs  logger.rs  utils.rs
data-layer/adapter/: Cargo.toml
data-layer/adapter/migrations/: 20250625042821_common.down.sql
design/: er.pu  generate-er.sh  pu2png.sh
design/class_diagrams/: health.pu  layers.pu
front/: Dockerfile  nginx.conf  package-lock.json  package.json
front/src/: App.css  App.js
front/src/components/header/: Header.css  Header.js
middle-layer/kernel/: Cargo.toml
middle-layer/kernel/src/: lib.rs
server/: .template.env  Cargo.toml  Dockerfile
server/application-layer/api/: Cargo.toml
server/application-layer/api/src/handlers/: health.rs
server/application-layer/web-app/: Cargo.toml
server/common-layer/registry/: Cargo.toml
server/common-layer/shared/: Cargo.toml
server/common-layer/shared/src/: config.rs  lib.rs
server/data-layer/adapter/: Cargo.toml
server/data-layer/adapter/migrations/: 20250625042821_common.up.sql  20250625044147_access-log.down.sql  20250625044147_access-log.up.sql
server/data-layer/adapter/src/database/: mod.rs
server/data-layer/adapter/src/repository/: health.rs
server/middle-layer/kernel/: Cargo.toml
