[package]
edition.workspace = true
license.workspace = true
name = "app"
publish.workspace = true
version.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
    "data-layer/adapter",
    "middle-layer/kernel",
    "common-layer/shared",
    "application-layer/web-app",
    "common-layer/registry",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
adapter = { path = "./data-layer/adapter" }
kernel = { path = "./middle-layer/kernel" }
web-app = { path = "./application-layer/web-app" }
shared = { path = "./common-layer/shared" }
registry = { path = "./common-layer/registry" }
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
derive-new = "0.7.0"
fxhash = "0.2.1"
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
async-trait = "0.1.88"
mockall = "0.13.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
thiserror = "2.0.12"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = "0.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-test = "0.4.4"

[dependencies]
adapter.workspace = true
kernel.workspace = true
shared.workspace = true
web-app.workspace = true
registry.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
derive-new.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
