[package]
edition.workspace = true
license.workspace = true
name = "shared"
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
indicatif.workspace = true
strum.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
tracing.workspace = true
serde.workspace = true
