[package]
edition.workspace = true
license.workspace = true
name = "shared"
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
indicatif.workspace = true
serde.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
